# Sotopia-demo

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  app.py  pyproject.toml
chat/: chat.py
data/: negotiation_agents.json  negotiation_scenarios.json
haicosystemDemo/: hai_stream.py
rendering/: render_episode.py
socialstream/: rendering_utils.py  utils.py
socialstream/chat/: __init__.py  callbacks.py  chat.py  chat_new.py  chat_omniscient.py
socialstream/rendering/: __init__.py  render_episode.py
