[tool.poetry]
name = "haicosystem-demo"
version = "0.0.1"
description = "An demo"
authors = ["Xuhui Zhou <zhouxuhui2018@gmail.com>"]
readme = "README.md"
packages = [{include = "haicosystem-demo"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
sotopia = "0.0.11"
types-requests = "^2.31"
haicosystem = { git = "https://github.com/XuhuiZhou/HAI-Cosys.git"}

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
nbmake = "*"
types-setuptools = "*"
ruff = "*"
mypy = "1.10.1"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "stubs"
strict = true
plugins = [
    "pydantic.mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"